--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 
 [dev-packages]
+tox = "*"
 
 [requires]
 python_version = "3.8"
@@ -13,3 +14,4 @@ python_version = "3.8"
 [scripts]
 build = "python setup.py sdist"
 install = "pip install -e ."
+test = "tox"
