--- a/Pipfile
+++ b/Pipfile
@@ -17,3 +17,5 @@ python_version = "3.8"
 build = "python setup.py sdist"
 install = "pip install -e ."
 test = "tox"
+coverage = "pytest --cov"
+main = "python -m euler"
