--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,12 @@
 [tox]
 envlist = py38, py39
+  coverage
+skip_missing_interpreters = true
 
 [testenv]
 deps = pytest
 commands = pytest
+
+[testenv:coverage]
+deps = pytest-cov
+commands = pytest --cov
