--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 envlist = py38, py39
   coverage
+  lint
+
 skip_missing_interpreters = true
 
 [testenv]
@@ -10,3 +12,14 @@ commands = pytest
 [testenv:coverage]
 deps = pytest-cov
 commands = pytest --cov
+
+[testenv:flake8]
+deps =
+  flake8
+  flake8-import-order
+commands = flake8 euler
+
+[testenv:lint]
+deps =
+  black
+commands = black euler
