--- a/tox.ini
+++ b/tox.ini
@@ -21,5 +21,8 @@ commands = flake8 euler
 
 [testenv:lint]
 deps =
+  isort
   black
-commands = black euler
+commands =
+  isort euler
+  black euler
